feat(diagram): enhance localization with translated images (#354)
* feat(diagram): enhance diagram generation with image-to-image support and feedback analysis

* feat(localization): add diagram translation support and enhance document processing

* feat(diagram): update diagram references and add localized images for getting started and managing preferences

* refactor: clean up whitespace and improve code formatting across multiple files for consistency

* refactor: remove deprecated image synchronization flags and related functionality from update agents and documentation

* test(analyze-feedback-intent): enhance tests to validate output structure and error handling for various feedback scenarios

* test(localization): add comprehensive tests for setReviewContent and translateDiagramImages functionality

* refactor: streamline code formatting and remove unused imports in choose-docs utility and related tests

* test(localization): improve test coverage

* feat(documentation): update managing preferences guide with new terminology and diagrams for clarity

* test(analyze-feedback-intent): add edge case tests for intentType fallback and generationMode handling

* refactor: remove diagram synchronization logic from replaceD2WithImage function

* docs: revise overview documentation for clarity and conciseness; update command descriptions and improve language consistency

* refactor(localization): enhance image replacement logic in setReviewContent and relocate translateDiagramImages agent to utils; update tests for improved coverage

* docs: update translation guides to improve clarity and consistency

* refactor(localization): update translation handling to always save document translations

* refactor(localization): improve translation handling in diagram mode to differentiate between existing and non-existing translation documents

* refactor(localization): exclude diagram from input properties to enhance translation handling

* refactor(localization): enhance dia

--- a/agents/localize/translate-multilingual.yaml
+++ b/agents/localize/translate-multilingual.yaml
@@ -1,7 +1,10 @@
 type: team
 name: translateMultilingual
-description: Batch translate documents to multiple languages
+description: Batch translate documents to multiple languages. Use --diagram to translate only diagram images without translating document content.
 skills:
+  # Step 1: Check --diagram flag and determine if we should translate diagrams only
+  - url: ./translate-or-skip-diagram.mjs
+  # Translate document content (only if translation is not already set)
   - type: team
     task_render_mode: collapse
     name: translate
@@ -9,20 +12,20 @@ skills:
       - url: ../utils/find-user-preferences-by-path.mjs
         default_input:
           scope: translation
-      - ../localize/translate-document.yaml
-      - type: transform
-        jsonata: |
-          $merge([
-            $,
-            { "reviewContent": translation }
-          ])
+      # Step 2: Cache diagram images for translation (before document translation)
+      # Checks --diagram flag and timestamps to determine if images need translation
+      - url: ../../utils/translate-diagram-images.mjs
+      # Step 3: Translate document content
+      - url: ./translate-document-wrapper.mjs
+      # Step 4: Replace cached diagram images and set review content
+      - url: ./set-review-content.mjs
     reflection:
       reviewer: ../utils/check-detail-result.mjs
       is_approved: isApproved
       max_iterations: 5
       return_last_on_max_iterations: true
     task_title: Translate '{{ title }}' to '{{ language }}'
-  - ../utils/save-doc-translation.mjs
+  - url: ./save-doc-translation-or-skip.mjs
 input_schema:
   type: object
   properties:
@@ -35,6 +38,9 @@ input_schema:
             type: string
     content:
       type: string
+    diagram:
+      type: boolean
+      description: Translate only diagram images without translating document content
 output_schema:
   type: object
   properties:
