--- a/aigne.yaml
+++ b/aigne.yaml
@@ -1,8 +1,8 @@
 #!/usr/bin/env aigne
 
 model:
-  # model: gemini-3-pro-preview
-  model: gemini-2.5-pro
+  model: gemini-3-pro-preview
+  # model: gemini-2.5-pro
   temperature: 0.8
   # https://github.com/AIGNE-io/aigne-framework/blob/main/models/gemini/src/gemini-chat-model.ts#L115
   reasoning_effort:
