--- a/agentic-agents/create/index.yaml
+++ b/agentic-agents/create/index.yaml
@@ -21,8 +21,8 @@ skills:
   - url: ../../agents/init/index.mjs
     default_input:
       skipIfExists: true
-  - ../utils/init-workspace-cache.mjs
-  - ../utils/load-base-sources.mjs
+  # - ../utils/init-workspace-cache.mjs
+  # - ../utils/load-base-sources.mjs
   - ./set-custom-prompt.mjs
   - type: "@aigne/agent-library/orchestrator"
     objective:
@@ -81,7 +81,7 @@ skills:
       max_tokens: 200000
       keep_recent: 30
 
-    shareAfs: true
+    # shareAfs: true
     afs:
       storage:
         url: .afs
