--- a/agentic-agents/create/index.yaml
+++ b/agentic-agents/create/index.yaml
@@ -96,6 +96,15 @@ skills:
             name: workspace
             localPath: .
             description: The target repository containing source code and documentation. Read-only, cannot be modified.
+            ignore:
+              - ".git"
+              - ".aigne"
+      context:
+        search:
+          presets:
+            predict-resources:
+              select:
+                agent: "../predict-resources/index.yaml"
       # drivers:
       #   - driver: i18n
       #     options:
