--- a/agentic-agents/create/index.yaml
+++ b/agentic-agents/create/index.yaml
@@ -23,7 +23,7 @@ skills:
     default_input:
       skipIfExists: true
   # - ../utils/init-workspace-cache.mjs
-  - ../utils/load-base-sources.mjs
+  # - ../utils/load-base-sources.mjs
   - ./set-custom-prompt.mjs
   - type: "@aigne/agent-library/orchestrator"
     objective:
