fix: update file exclusion criteria and improve language detection in initialization

--- a/agentic-agents/create/index.yaml
+++ b/agentic-agents/create/index.yaml
@@ -115,6 +115,8 @@ skills:
             ignore:
               - ".git"
               - ".aigne"
+              - "DOCSMITH.md"
+              - "DOC-SMITH.md"
       context:
         search:
           presets:
