--- a/agentic-agents/create/index.yaml
+++ b/agentic-agents/create/index.yaml
@@ -29,7 +29,7 @@ skills:
 
     planner:
       type: ai
-      model: anthropic/claude-opus-4-5
+      # model: anthropic/claude-opus-4-5
       instructions:
         url: ../common/planner.md
       input_schema:
@@ -53,7 +53,7 @@ skills:
 
     worker:
       type: ai
-      model: gemini-3-pro-preview
+      # model: gemini-3-pro-preview
       instructions:
         url: ../common/worker.md
       input_schema:
