--- a/agentic-agents/detail/index.yaml
+++ b/agentic-agents/detail/index.yaml
@@ -40,7 +40,7 @@ skills:
       url: objective.md
     planner:
       type: ai
-      model: anthropic/claude-opus-4-5
+      # model: anthropic/claude-opus-4-5
       instructions:
         url: ../common/planner.md
       input_schema:
@@ -60,7 +60,7 @@ skills:
             description: The custom planner prompt
     worker:
       type: ai
-      model: gemini-3-pro-preview
+      # model: gemini-3-pro-preview
       instructions:
         url: ../common/worker.md
       input_schema:
