--- a/agents/create/index.yaml
+++ b/agents/create/index.yaml
@@ -17,7 +17,7 @@ skills:
       savePath:
         $get: outputDir
       fileName: structure-plan.json
-  - ./user-review-document-structure.mjs
+  # - ./user-review-document-structure.mjs
   - url: ../utils/save-output.mjs
     default_input:
       saveKey: documentStructure
